# TocDoc---Enterprise-RAG

./: .coderabbit.yaml  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-docs.txt
.devcontainer/: README.md  devcontainer.json  postCreate.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
charts/tocdoc/: .helmignore  Chart.yaml  README.md  values-production.yaml  values.yaml
clients/python/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
clients/python/tests/: test_async_and_admin.py  test_cli.py  test_client.py  test_langchain.py  test_no_langchain.py  test_retry_policy.py  test_streaming.py
clients/python/tocdoc_sdk/: __init__.py  _retry.py  _sse.py  admin.py  async_client.py  cli.py  client.py  errors.py  langchain.py  models.py
docs/: API.md  ARCHITECTURE.md  AUTONOMOUS_SESSION_LOG.md  CONFIGURATION.md  LICENSE_COMPLIANCE.md  LOCAL_DEV.md  OPERATIONS.md  PRODUCT_TIERS.md  README.md  RESUME.md  THREAT_MODEL.md
docs/agent_plan/: 00_MASTER_TRACKER.md  01_P0_HARDENING.md  02_P1_ENTERPRISE.md  03_P2_DIFFERENTIATION.md  04_AGENTIC_ROADMAP.md  05_CODEBASE_CONTEXT.md  06_TECH_LEAD_OPERATING_MODEL.md  07_P2_P4_REFRESHED_PLAN.md
docs/architect_phase_2/: 00_PHASE_2_EXECUTION_PLAN.md  01_ADMIN_API_SPEC.md  02_OBSERVABILITY_SPEC.md  03_DEPLOYMENT_VALIDATION_SPEC.md  04_BOT_TAG_DECISION_RECORD.md  05_PRIORITY_REMOVE_ALL_GMR_REFERENCES.md  05_PRODUCT_NEUTRAL_NAMING_POLICY.md  06_BACKLOG_HYGIENE_ARCHIVE_COMPLETED_ITEMS.md  07_P3_LANGGRAPH_ADR.md  08_P1_3_CONNECTORS_ADR.md  09_P2_1_PAGE_CITATIONS_ADR.md  10_P4_1_TEAMS_BOT_ADR.md
docs/deployment/: CONTAINER_IMAGES.md  INSTALLATION.md  P3_ENABLEMENT.md  SMOKE_TEST.md
docs/productization_backlog/: 00_BACKLOG_INDEX.md  01_SECURITY_Enable_strict_Azure_AD_JWT_validation.md  02_ISOLATION_Enforce_bot_tag_tenant_scoping_in_retrieval.md  03_CONCURRENCY_Remove_global_request_state_from_qna_pipeline.md  04_INGESTION_Add_deterministic_chunk_ids_and_reindex_delete_lifecycle.md  05_RETRIEVAL_Implement_true_token_aware_chunking_and_eval.md  06_API_Harden_error_contracts_request_validation_and_response_schema.md  07_CONFIG_Normalize_env_secret_bootstrap_and_deployment_profiles.md  08_RUNTIME_Harden_containers_cors_logging_and_cloud_native_defaults.md  09_OBSERVABILITY_Add_telemetry_audit_logs_and_operational_metrics.md  10_PRODUCT_Add_admin_APIs_for_index_management_and_tenant_operations.md  11_CONNECTORS_Add_connector_based_ingestion_for_blob_sharepoint_upload.md  12_PLATFORM_Add_IaC_CI_CD_and_repeatable_client_installation_assets.md  13_QUALITY_Expand_test_strategy_coverage_and_release_gates.md  14_ROADMAP_Retrieval_quality_upgrades_reranking_metadata_page_citations.md  15_PRODUCT_Define_packaging_tiers_and_deployment_operating_model.md
docs/security/: CODEQL_TRIAGE.md
eval/: .gitignore  README.md  __init__.py  continuous.py  ragas_eval.py  requirements.txt  trend_report.py
eval/benchmark/: sample.jsonl
eval/tests/: conftest.py  test_continuous.py  test_dataset.py  test_ragas_eval.py  test_trend_report.py
examples/: 01_ask.py  02_streaming.py  03_admin.py  04_langchain_retriever.py  05_curl.sh  README.md
examples/tests/: conftest.py  fakes.py  test_examples.py
infra/: README.md  main.bicep
infra/parameters/: dev.bicepparam  prod.bicepparam
infra/terraform/: .gitignore  .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
loadtest/: .gitignore  README.md  config.py  helpers.py  locustfile.py  requirements.txt
loadtest/scenarios/: ramp.conf  smoke.conf  soak.conf
loadtest/tests/: conftest.py  test_config.py  test_helpers.py
scripts/: validate_deployment.sh
services/ingestion/: .dockerignore  .env.example  Dockerfile  README.md  app.py  custom_rag.py  errors.py  loaders.py  middleware.py  (+5 more)
web/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json
(+131 files in other folders)
